buildscript {
    ext {
        springBootVersion = '2.1.1.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

plugins {
    id 'io.franzbecker.gradle-lombok' version '1.14'
    id 'java'
    id 'eclipse-wtp'
    id 'idea'
    id 'org.springframework.boot' version '2.1.1.RELEASE'
    id "io.spring.dependency-management" version '1.0.6.RELEASE'
    id 'net.ltgt.apt' version '0.15'
}

group = 'pl.wturnieju'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

configurations {
    providedRuntime
}

lombok {
    version = '1.18.4'
    sha256 = ""
}

wrapper {
    gradleVersion = '5.1'
}

apply plugin: 'net.ltgt.apt-idea'

dependencies {
    compile 'org.springframework.boot:spring-boot-starter-actuator'
    compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
    compile 'org.springframework.boot:spring-boot-starter-data-rest'
    compile 'org.springframework.boot:spring-boot-starter-security'
    compile 'org.springframework.boot:spring-boot-starter-web'
    compile 'org.springframework.boot:spring-boot-starter-mail'
    compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
    runtime 'org.springframework.boot:spring-boot-devtools'
    testCompile('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'junit', module: 'junit'
    }
    testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testCompile 'org.springframework.security:spring-security-test'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    compile 'com.google.guava:guava:27.0.1-jre'
    compile 'javax.xml.bind:jaxb-api:2.3.1'
    compile 'com.auth0:java-jwt:3.4.1'
    compile 'io.reactivex.rxjava2:rxjava:2.2.5'
    compile 'org.apache.commons:commons-lang3:3.8.1'
    compileOnly 'org.projectlombok:lombok:1.18.4'
    testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'
    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.2')
    testCompile('org.junit.jupiter:junit-jupiter-params:5.3.2')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')


    compile 'org.mapstruct:mapstruct-jdk8:1.2.0.Final'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.2.0.Final"
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.2.0.Final"
}

test {
    useJUnitPlatform()
    testLogging {
        events "failed", "skipped", "passed"
    }
    afterSuite { desc, result ->
        if (!desc.parent) {
            println "\nTest result: ${result.resultType}"
            println "Test summary: ${result.testCount} tests, " +
                    "${result.successfulTestCount} succeeded, " +
                    "${result.failedTestCount} failed, " +
                    "${result.skippedTestCount} skipped"
        }
    }
}

compileJava.dependsOn(processResources)
